--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
     font-family: 'mainfont';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/press-start-2p-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('fonts/press-start-2p-v9-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/press-start-2p-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/press-start-2p-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/press-start-2p-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/press-start-2p-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/press-start-2p-v9-latin-regular.svg#PressStart2P') format('svg'); /* Legacy iOS */
+         url('fonts/press-start-2p-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('fonts/press-start-2p-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('fonts/press-start-2p-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('fonts/press-start-2p-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('fonts/press-start-2p-v9-latin-regular.svg#PressStart2P') format('svg'); /* Legacy iOS */
   }
 
